--- a/src/components/TodoForm.css
+++ b/src/components/TodoForm.css
@@ -1,15 +1,21 @@
-.onList {
+.addToList {
+    margin: 30px 0;
+    display: flex;
+    padding: 20px;
+}
+
+.addToListInput {
     list-style-type: none;
     font-size: 18px;
     margin: 20px;
     padding: 3px;
     border: 1px solid black;
     background: #ffffff;
-    box-shadow: 0 4px 8px 0 rgba(63, 58, 58, 0.4);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
     transition: 0.6s;
 }
 
-.onList:hover {
+.addToListInput:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.6);
     background: rgb(183, 196, 209);
 }
@@ -19,6 +25,5 @@
     outline: none;
     background-color: transparent;
     color: #ff0000;
-    font-size: 18px;
-    float: right;
+    font-size: 40px;
 }
